@@ -24,35 +24,34 @@ from JetMETAnalysis.JetAnalyzers.JetCorrection_cff     import *
 stdGenJetsDict = {
     'ak5calo': 'ak5GenJets',
     'ak7calo': 'ak7GenJets',
-    'sc5calo': 'sisCone5GenJets',
-    'sc7calo': 'sisCone7GenJets',
+#    'sc5calo': 'sisCone5GenJets',
+#    'sc7calo': 'sisCone7GenJets',
     'ic5calo': 'iterativeCone5GenJets',
     'kt4calo': 'kt4GenJets',
     'kt6calo': 'kt6GenJets',
     'ak5pf':   'ak5GenJets',
     'ak7pf':   'ak7GenJets',
-    'sc5pf':   'sisCone5GenJets',
-    'sc7pf':   'sisCone7GenJets',
+#    'sc5pf':   'sisCone5GenJets',
+#    'sc7pf':   'sisCone7GenJets',
     'ic5pf':   'iterativeCone5GenJets',
     'kt4pf':   'kt4GenJets',
     'kt6pf':   'kt6GenJets',
     'ak5trk': 'ak5GenJets',
     'ak7trk': 'ak7GenJets',
-    'sc5trk': 'sisCone5GenJets',
-    'sc7trk': 'sisCone7GenJets',
+#    'sc5trk': 'sisCone5GenJets',
+#    'sc7trk': 'sisCone7GenJets',
     'ic5trk': 'iterativeCone5GenJets',
     'kt4trk': 'kt4GenJets',
     'kt6trk': 'kt6GenJets',
     'ak5jpt':  'ak5GenJets',
-    'sc5jpt':  'ak5GenJets',
     'ic5jpt':  'ak5GenJets'
     }
 
 genJetsDict = {
     'ak5calo':     ('ak5GenJetsNoMuNoNu', ak5GenJetsNoMuNoNu),
     'ak7calo':     ('ak7GenJetsNoMuNoNu', ak7GenJetsNoMuNoNu),
-    'sc5calo':     ('sc5GenJetsNoMuNoNu', sc5GenJetsNoMuNoNu),
-    'sc7calo':     ('sc7GenJetsNoMuNoNu', sc7GenJetsNoMuNoNu),
+#    'sc5calo':     ('sc5GenJetsNoMuNoNu', sc5GenJetsNoMuNoNu),
+#    'sc7calo':     ('sc7GenJetsNoMuNoNu', sc7GenJetsNoMuNoNu),
     'ic5calo':     ('ic5GenJetsNoMuNoNu', ic5GenJetsNoMuNoNu),
     'kt4calo':     ('kt4GenJetsNoMuNoNu', kt4GenJetsNoMuNoNu),
     'kt5calo':     ('kt5GenJetsNoMuNoNu', kt5GenJetsNoMuNoNu),
@@ -64,8 +63,8 @@ genJetsDict = {
     'ca7calo':     ('ca7GenJetsNoMuNoNu', ca7GenJetsNoMuNoNu),
     'ak5pf':       ('ak5GenJetsNoNu',     ak5GenJetsNoNu),
     'ak7pf':       ('ak7GenJetsNoNu',     ak7GenJetsNoNu),
-    'sc5pf':       ('sc5GenJetsNoNu',     sc5GenJetsNoNu),
-    'sc7pf':       ('sc7GenJetsNoNu',     sc7GenJetsNoNu),
+#    'sc5pf':       ('sc5GenJetsNoNu',     sc5GenJetsNoNu),
+#    'sc7pf':       ('sc7GenJetsNoNu',     sc7GenJetsNoNu),
     'ic5pf':       ('ic5GenJetsNoNu',     ic5GenJetsNoNu),
     'kt4pf':       ('kt4GenJetsNoNu',     kt4GenJetsNoNu),
     'kt5pf':       ('kt5GenJetsNoNu',     kt5GenJetsNoNu),
@@ -77,8 +76,8 @@ genJetsDict = {
     'ca7pf':       ('ca7GenJetsNoNu',     ca7GenJetsNoNu),
     'ak5trk':      ('ak5GenJetsNoNu',     ak5GenJetsNoNu),
     'ak7trk':      ('ak7GenJetsNoNu',     ak7GenJetsNoNu),
-    'sc5trk':      ('sc5GenJetsNoNu',     sc5GenJetsNoNu),
-    'sc7trk':      ('sc7GenJetsNoNu',     sc7GenJetsNoNu),
+#    'sc5trk':      ('sc5GenJetsNoNu',     sc5GenJetsNoNu),
+#    'sc7trk':      ('sc7GenJetsNoNu',     sc7GenJetsNoNu),
     'ic5trk':      ('ic5GenJetsNoNu',     ic5GenJetsNoNu),
     'kt4trk':      ('kt4GenJetsNoNu',     kt4GenJetsNoNu),
     'kt5trk':      ('kt5GenJetsNoNu',     kt5GenJetsNoNu),
@@ -89,7 +88,6 @@ genJetsDict = {
     'ca6trk':      ('ca6GenJetsNoNu',     ca6GenJetsNoNu),
     'ca7trk':      ('ca7GenJetsNoNu',     ca7GenJetsNoNu),
     'ak5jpt':      ('ak5GenJetsNoNu',     ak5GenJetsNoNu),
-    'sc5jpt':      ('sc5GenJetsNoNu',     sc5GenJetsNoNu),
     'ic5jpt':      ('ic5GenJetsNoNu',     ic5GenJetsNoNu)
     }
 
@@ -103,20 +101,19 @@ stdRecJetsDict = {
     'kt6calo':     'kt6CaloJets',
     'ak5pf':       'ak5PFJets',
     'ak7pf':       'ak7PFJets',
-    'sc5pf':       'sisCone5PFJets',
-    'sc7pf':       'sisCone7PFJets',
+ #   'sc5pf':       'sisCone5PFJets',
+ #   'sc7pf':       'sisCone7PFJets',
     'ic5pf':       'iterativeCone5PFJets',
     'kt4pf':       'kt4PFJets',
     'kt6pf':       'kt6PFJets',
     'ak5trk':     'ak5TrackJets',
 #    'ak7trk':     'ak7TrackJets',
-    'sc5trk':     'sisCone5TrackJets',
+#    'sc5trk':     'sisCone5TrackJets',
 #    'sc7trk':     'sisCone7TrackJets',
 #    'ic5trk':     'iterativeCone5TrackJets',
     'kt4trk':     'kt4TrackJets',
 #    'kt6trk':     'kt6TrackJets',
     'ak5jpt':      'ak5JPTJets',
-    'sc5jpt':      'sc5JPTJets',
     'ic5jpt':      'ic5JPTJets'
     }
 
@@ -136,8 +133,8 @@ recJetsDict = {
     'ca7calo':     ('ca7CaloJets',      ca7CaloJets),
     'ak5pf':       ('ak5PFJets',        ak5PFJets),
     'ak7pf':       ('ak7PFJets',        ak7PFJets),
-    'sc5pf':       ('sc5PFJets',        sc5PFJets),
-    'sc7pf':       ('sc7PFJets',        sc7PFJets),
+#    'sc5pf':       ('sc5PFJets',        sc5PFJets),
+#    'sc7pf':       ('sc7PFJets',        sc7PFJets),
     'ic5pf':       ('ic5PFJets',        ic5PFJets),
     'kt4pf':       ('kt4PFJets',        kt4PFJets),
     'kt5pf':       ('kt5PFJets',        kt5PFJets),
@@ -149,7 +146,7 @@ recJetsDict = {
     'ca7pf':       ('ca7PFJets',        ca7PFJets),
     'ak5trk':      ('ak5TrackJets',     ak5TrackJets),
 #    'ak7trk':      ('ak7TrackJets',     ak7TrackJets),
-    'sc5trk':      ('sisCone5TrackJets',     sisCone5TrackJets),
+#    'sc5trk':      ('sisCone5TrackJets',     sisCone5TrackJets),
 #    'sc7trk':      ('sc7TrackJets',     sc7TrackJets),
 #    'ic5trk':      ('ic5TrackJets',     ic5TrackJets),
     'kt4trk':      ('kt4TrackJets',     kt4TrackJets),
@@ -161,15 +158,14 @@ recJetsDict = {
 #    'ca6trk':      ('ca6TrackJets',     ca6TrackJets),
 #    'ca7trk':      ('ca7TrackJets',     ca7TrackJets),
     'ak5jpt':      ('ak5JPTJets',       ak5JPTJets),
-    'sc5jpt':      ('sc5JPTJets',       sc5JPTJets),
     'ic5jpt':      ('ic5JPTJets',       ic5JPTJets)
     }
 
 corrJetsDict = {
     'ak5calol1':     ('ak5CaloJetsL1',    ak5CaloJetsL1),
     'ak7calol1':     ('ak7CaloJetsL1',    ak7CaloJetsL1),
-    'sc5calol1':     ('sc5CaloJetsL1',    sc5CaloJetsL1),
-    'sc7calol1':     ('sc7CaloJetsL1',    sc7CaloJetsL1),
+#    'sc5calol1':     ('sc5CaloJetsL1',    sc5CaloJetsL1),
+#    'sc7calol1':     ('sc7CaloJetsL1',    sc7CaloJetsL1),
     'ic5calol1':     ('ic5CaloJetsL1',    ic5CaloJetsL1),
     'kt4calol1':     ('kt4CaloJetsL1',    kt4CaloJetsL1),
     'kt5calol1':     ('kt5CaloJetsL1',    kt5CaloJetsL1),
@@ -181,8 +177,8 @@ corrJetsDict = {
     'ca7calol1':     ('ca7CaloJetsL1',    ca7CaloJetsL1),
     'ak5pfl1':       ('ak5PFJetsL1',      ak5PFJetsL1),
     'ak7pfl1':       ('ak7PFJetsL1',      ak7PFJetsL1),
-    'sc5pfl1':       ('sc5PFJetsL1',      sc5PFJetsL1),
-    'sc7pfl1':       ('sc7PFJetsL1',      sc7PFJetsL1),
+#    'sc5pfl1':       ('sc5PFJetsL1',      sc5PFJetsL1),
+#    'sc7pfl1':       ('sc7PFJetsL1',      sc7PFJetsL1),
     'ic5pfl1':       ('ic5PFJetsL1',      ic5PFJetsL1),
     'kt4pfl1':       ('kt4PFJetsL1',      kt4PFJetsL1),
     'kt5pfl1':       ('kt5PFJetsL1',      kt5PFJetsL1),
@@ -194,8 +190,8 @@ corrJetsDict = {
     'ca7pfl1':       ('ca7PFJetsL1',      ca7PFJetsL1),
     'ak5calol2l3':   ('ak5CaloJetsL2L3',  ak5CaloJetsL2L3),
     'ak7calol2l3':   ('ak7CaloJetsL2L3',  ak7CaloJetsL2L3),
-    'sc5calol2l3':   ('sc5CaloJetsL2L3',  sc5CaloJetsL2L3),
-    'sc7calol2l3':   ('sc7CaloJetsL2L3',  sc7CaloJetsL2L3),
+#    'sc5calol2l3':   ('sc5CaloJetsL2L3',  sc5CaloJetsL2L3),
+#    'sc7calol2l3':   ('sc7CaloJetsL2L3',  sc7CaloJetsL2L3),
     'ic5calol2l3':   ('ic5CaloJetsL2L3',  ic5CaloJetsL2L3),
     'kt4calol2l3':   ('kt4CaloJetsL2L3',  kt4CaloJetsL2L3),
     'kt5calol2l3':   ('kt5CaloJetsL2L3',  kt5CaloJetsL2L3),
@@ -206,12 +202,11 @@ corrJetsDict = {
     'ca6calol2l3':   ('ca6CaloJetsL2L3',  ca6CaloJetsL2L3),
     'ca7calol2l3':   ('ca7CaloJetsL2L3',  ca7CaloJetsL2L3),
     'ak5jptl2l3':    ('ak5JPTJetsL2L3',   ak5JPTJetsL2L3),
-    'sc5jptl2l3':    ('sc5JPTJetsL2L3',   sc5JPTJetsL2L3),
     'ic5jptl2l3':    ('ic5JPTJetsL2L3',   ic5JPTJetsL2L3),
     'ak5pfl2l3':     ('ak5PFJetsL2L3',    ak5PFJetsL2L3),
     'ak7pfl2l3':     ('ak7PFJetsL2L3',    ak7PFJetsL2L3),
-    'sc5pfl2l3':     ('sc5PFJetsL2L3',    sc5PFJetsL2L3),
-    'sc7pfl2l3':     ('sc7PFJetsL2L3',    sc7PFJetsL2L3),
+#    'sc5pfl2l3':     ('sc5PFJetsL2L3',    sc5PFJetsL2L3),
+#    'sc7pfl2l3':     ('sc7PFJetsL2L3',    sc7PFJetsL2L3),
     'ic5pfl2l3':     ('ic5PFJetsL2L3',    ic5PFJetsL2L3),
     'kt4pfl2l3':     ('kt4PFJetsL2L3',    kt4PFJetsL2L3),
     'kt5pfl2l3':     ('kt5PFJetsL2L3',    kt5PFJetsL2L3),
@@ -236,8 +231,8 @@ corrJetsDict = {
 #    'ca7trkl2l3':   ('ca7TrackJetsL2L3',  ca7TrackJetsL2L3),
     'ak5calol1l2l3': ('ak5CaloJetsL1L2L3',ak5CaloJetsL1L2L3),
     'ak7calol1l2l3': ('ak7CaloJetsL1L2L3',ak7CaloJetsL1L2L3),
-    'sc5calol1l2l3': ('sc5CaloJetsL1L2L3',sc5CaloJetsL1L2L3),
-    'sc7calol1l2l3': ('sc7CaloJetsL1L2L3',sc7CaloJetsL1L2L3),
+#    'sc5calol1l2l3': ('sc5CaloJetsL1L2L3',sc5CaloJetsL1L2L3),
+#    'sc7calol1l2l3': ('sc7CaloJetsL1L2L3',sc7CaloJetsL1L2L3),
     'ic5calol1l2l3': ('ic5CaloJetsL1L2L3',ic5CaloJetsL1L2L3),
     'kt4calol1l2l3': ('kt4CaloJetsL1L2L3',kt4CaloJetsL1L2L3),
     'kt5calol1l2l3': ('kt5CaloJetsL1L2L3',kt5CaloJetsL1L2L3),
@@ -249,8 +244,8 @@ corrJetsDict = {
     'ca7calol1l2l3': ('ca7CaloJetsL1L2L3',ca7CaloJetsL1L2L3),
     'ak5pfl1l2l3':   ('ak5PFJetsL1L2L3',  ak5PFJetsL1L2L3),
     'ak7pfl1l2l3':   ('ak7PFJetsL1L2L3',  ak7PFJetsL1L2L3),
-    'sc5pfl1l2l3':   ('sc5PFJetsL1L2L3',  sc5PFJetsL1L2L3),
-    'sc7pfl1l2l3':   ('sc7PFJetsL1L2L3',  sc7PFJetsL1L2L3),
+#    'sc5pfl1l2l3':   ('sc5PFJetsL1L2L3',  sc5PFJetsL1L2L3),
+#    'sc7pfl1l2l3':   ('sc7PFJetsL1L2L3',  sc7PFJetsL1L2L3),
     'ic5pfl1l2l3':   ('ic5PFJetsL1L2L3',  ic5PFJetsL1L2L3),
     'kt4pfl1l2l3':   ('kt4PFJetsL1L2L3',  kt4PFJetsL1L2L3),
     'kt5pfl1l2l3':   ('kt5PFJetsL1L2L3',  kt5PFJetsL1L2L3),
@@ -374,8 +369,6 @@ def addAlgorithm(process,alg_size_type_corr,reco):
         process.load('JetMETAnalysis.JetAnalyzers.JPTReconstruction_cff')
         if   alg_size == 'ak5':
             sequence = process.ak5JPTJetsSequence * sequence
-        elif alg_size == 'sc5':
-            sequence = process.sc5JPTJetsSequence * sequence
         elif alg_size == 'ic5':
             sequence = process.ic5JPTJetsSequence * sequence
         else:
